# lossless-codec

./: .gitignore
lib/: bstream.cpp  bstream.h  extmath.cpp  extmath.h
report/: report.tex
src/: AdvancedPredictor.cpp  AudioHandler.cpp  CMakeLists.txt  Golomb.cpp  NaivePredictor.cpp  Predictor.cpp  Quantizer.cpp  RealAudioCodec.cpp  main.cpp
src/exception/: BadFormatException.h
src/include/: AdvancedPredictor.h  AudioHandler.h  Golomb.h  IntegerFiniteImpulseResponseCoefficients.h  NaivePredictor.h  Predictor.h  Quantizer.h  RealAudioCodec.h
